<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/title_main"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvProjectName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_project_name"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etProjectName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_project_name"
            android:inputType="text"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvProjectName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvHourlyRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_hourly_rate"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/etProjectName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etHourlyRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hourly_rate"
            android:inputType="numberDecimal"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvHourlyRate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvComplexity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_complexity"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/etHourlyRate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioGroup
            android:id="@+id/rgComplexity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tvComplexity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/rbLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_low" />

            <RadioButton
                android:id="@+id/rbMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_medium" />

            <RadioButton
                android:id="@+id/rbHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_high" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/cbUrgent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_urgent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/rgComplexity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

       
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:layout_marginTop="16dp"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/cbUrgent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_calculate"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/switchTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
